# rewrit

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_PLAN.md  README.md  SECURITY.md  composer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-cargo.yml  publish-node.yml  publish-php.yml  release.yml
crates/rewrit-adapter-command/: Cargo.toml
crates/rewrit-adapter-command/src/: lib.rs
crates/rewrit-adapter-http/: Cargo.toml
crates/rewrit-adapter-http/src/: lib.rs  request.rs  response.rs  server.rs
crates/rewrit-adapter-node/: Cargo.toml
crates/rewrit-adapter-node/src/: lib.rs
crates/rewrit-adapter-php/: Cargo.toml
crates/rewrit-adapter-php/src/: lib.rs
crates/rewrit-adapter-python/: Cargo.toml
crates/rewrit-adapter-python/src/: lib.rs
crates/rewrit-adapter-rust/: Cargo.toml
crates/rewrit-adapter-rust/src/: lib.rs
crates/rewrit-cli/: Cargo.toml
crates/rewrit-cli/src/: app.rs  main.rs
crates/rewrit-cli/src/commands/: completions.rs  discover.rs  explain.rs  init.rs  manpage.rs  mod.rs  report.rs  schema.rs
crates/rewrit-cli/tests/: init_templates.rs
crates/rewrit-core/: Cargo.toml
crates/rewrit-core/src/: lib.rs
crates/rewrit-core/src/compare/: comparator.rs  diff.rs  effects.rs  error.rs  json.rs  mod.rs  schema.rs
crates/rewrit-core/src/normalize/: http.rs  mod.rs  ordering.rs  path.rs  php.rs  pipeline.rs  regex.rs  time.rs
crates/rewrit-core/src/policy/: engine.rs  mod.rs  severity.rs  waiver.rs
crates/rewrit-core/src/validate/: manifest.rs  mod.rs  schema.rs
crates/rewrit-core/tests/: properties.rs
crates/rewrit-engine/: Cargo.toml
crates/rewrit-engine/src/: engine.rs  events.rs  lib.rs  planner.rs  scheduler.rs
crates/rewrit-engine/src/discovery/: binding.rs  manifest.rs  mod.rs
crates/rewrit-engine/src/runner/: env.rs  mod.rs  process.rs  sandbox.rs  timeout.rs
crates/rewrit-engine/src/store/: baseline.rs  cache.rs  filesystem.rs  mod.rs
crates/rewrit-engine/tests/: command_adapter.rs  http_adapter.rs  sdk_fixtures.rs  sdk_observations.rs
crates/rewrit-model/: Cargo.toml
crates/rewrit-model/src/: case.rs  contract.rs  divergence.rs  effect.rs  error.rs  ids.rs  lib.rs  observation.rs  report.rs  value.rs
crates/rewrit-protocol/: Cargo.toml
crates/rewrit-protocol/src/: adapter.rs  events.rs  lib.rs  ndjson.rs  version.rs
crates/rewrit-report/: Cargo.toml
crates/rewrit-report/src/: html.rs  json.rs  junit.rs  lib.rs  markdown.rs  ndjson.rs  sarif.rs  terminal.rs
crates/rewrit-report/tests/: snapshots.rs
docs/: README.md
docs/adapters/: django.md  node-encore.md  node-jest.md  node-vitest.md  php-pest.md  php-phpunit.md  python-pytest.md  rust-cargo-test.md
docs/adr/: 0001-ndjson-adapter-protocol.md  0002-reference-candidate-model.md  0003-json-schema-contracts.md  0004-no-language-parser-in-core.md
docs/concepts/: contracts.md  observations.md  parity.md  policies.md  side-effects.md
docs/migrations/: django-to-rust.md  laravel-to-encore.md  laravel-to-node.md
docs/protocol/: adapter-protocol-v1.md  observation-schema-v1.md  report-schema-v1.md
examples/command-to-command/: candidate.sh  reference.sh  rewrit.toml
examples/django-to-rust/: README.md  rewrit.toml
examples/django-to-rust/candidate-rust/: Cargo.toml
examples/django-to-rust/candidate-rust/src/: lib.rs
examples/django-to-rust/candidate-rust/tests/: billing.rs
examples/django-to-rust/contracts/billing/: invoice.create.success.json
examples/django-to-rust/reference-django/: run.py
examples/http-to-http/: candidate_server.py  reference_server.py  rewrit.toml
examples/http-to-http/contracts/: invoice.create.success.json
examples/laravel-to-encore/: README.md  rewrit.toml
examples/laravel-to-encore/candidate-encore/: run.mjs
examples/laravel-to-encore/contracts/billing/: invoice.create.success.json
examples/laravel-to-encore/legacy-laravel/: run.php
examples/php-to-node-monolith/: README.md  rewrit.toml
examples/php-to-node-monolith/candidate-node/: run.mjs
examples/php-to-node-monolith/contracts/catalog/: product.price.success.json
examples/php-to-node-monolith/reference-php/: run.php
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: encore.ts  index.ts  jest-reporter.ts  vitest-reporter.ts
sdks/php/: README.md  composer.json
sdks/php/src/: Autoload.php  Laravel.php  PHPUnitCase.php  PHPUnitExtension.php  PestPlugin.php  Rewrit.php
sdks/python/: pyproject.toml
sdks/python/rewrit_pytest/: __init__.py  django.py  plugin.py
sdks/rust/: Cargo.toml
sdks/rust-macros/: Cargo.toml
sdks/rust-macros/src/: lib.rs
sdks/rust/src/: lib.rs
sdks/rust/tests/: case_macro.rs
