[package]
name = "rewrit-adapter-command"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
rewrit-engine.workspace = true
rewrit-model.workspace = true
rewrit-protocol.workspace = true

