[package]
name = "rewrit-adapter-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rewrit-model.workspace = true
rewrit-protocol.workspace = true
