[package]
name = "rewrit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rewrit"
path = "src/main.rs"
doc = false

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
miette.workspace = true
rewrit-engine.workspace = true
rewrit-model.workspace = true
rewrit-protocol.workspace = true
rewrit-report.workspace = true
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
