[package]
name = "rewrit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
rewrit-model.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
