[package]
name = "rewrit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
futures.workspace = true
globset.workspace = true
regex.workspace = true
rewrit-adapter-http.workspace = true
rewrit-core.workspace = true
rewrit-model.workspace = true
rewrit-protocol.workspace = true
rewrit-report.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
