[package]
name = "rewrit-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
rewrit-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

