[package]
name = "rewrit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK helpers for emitting Rewrit observations."
rust-version.workspace = true

[dependencies]
rewrit-model.workspace = true
rewrit-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
