[package]
name = "rewrit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK helpers for emitting Rewrit observations."
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rewrit-model.workspace = true
rewrit-protocol.workspace = true
rewrit-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
